# rock_c

./: .gitignore  CMakeLists.txt  CMakeLists_mac.txt  CMakeLists_mark.txt  Makefile  README.md  ffmpeg.md  ffmpeg_temp.md  frame.md  google_test.txt  main  system.txt
function/: Sort.c  bufferevent_client.c  event-client  event-client.c  event-server  event-server.c  first.c  hello-world.c  second.c  simple-client.c  util.c  vga.c
function/base/: Sort.c  call.c  first.c  main.c  second.c  test.c
function/ffmpeg/: 2.c  AudioDecode.c  OtherFile2FormatFile.c  PcmEncodeACC.c  VideoDecode.c  YuvEncode.c  YuvEncodeH264.c  YuvEncodeJPEG.c  audio_coding_check.c  audio_source_check.c  avdeo_high_base_learn.c  ff_log.c  ff_log_impl.c  first.c  my.c  my_base_learn.c  package_check.c  protocol_check.c  sdl_player.c  test.c  video_high_base_learn.c  video_source_check.c  video_transcode.c  voice_source_check.c
function/ffmpeg/each_part/: video_coding_check.c
function/libevent/: bufferevent_client.c  event-client.c  event-server.c  simple-server.c
header/: Sort.h  call.h  rock.h  util.h
include/ffmpeg/libavcodec/: avcodec.h  codec.h  codec_id.h  codec_par.h  mediacodec.h  packet.h  vdpau.h  version.h  videotoolbox.h
include/ffmpeg/libavformat/: avformat.h  version.h
include/libevent/event2/: buffer.h  bufferevent.h  event-config.h  listener.h  util.h
rock-auth/: .gitignore  pom.xml
rock_c/: CMakeLists.txt  main.c
rock_c/source/: Test.txt
source/: NocturneNo2inEflat_44.1k_s16le_1.aac  h.txt
tools/: README.md  pom.xml
tools/logs/: mylog.log.2022-08-05
(+917 files in other folders)
